# blogAPI2

./: main.py  pyproject.toml
alembic/: env.py
app/: dependencies.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: user.py
app/authentication/: jwt.py
app/core/: config.py  events.py  lifespan.py
app/db/: __init__.py  base.py  repository.py  session.py  test.py
app/dependencies/: db.py  services.py
app/models/: user.py
app/repository/: base.py
core/: config.py
docker/: docker-compose-infra.yml  docker-compose-postgres.yml
logs/: README.md
scripts/: create_migration.sh  reset_migration.sh  run_migrations.sh
src/: main.py
src/app/: router.py
src/app/open_fiscal/: aggregator.py  test.py
src/app/open_fiscal/api/: dependencies.py
src/app/open_fiscal/api/endpoint/: fiscal.py
src/app/open_fiscal/model/: fiscal.py
src/app/open_fiscal/repository/: fiscal.py
src/app/open_fiscal/schema/: fiscal.py
src/app/open_fiscal/service/: fiscal.py
src/app/user/api/: dependencies.py
src/app/user/api/endpoint/: user.py
src/app/user/api/endpoints/: user.py
src/app/user/model/: user.py
src/app/user/repository/: user.py
src/app/user/schema/: login.py  register.py
src/app/user/service/: user.py
src/core/: config.py  lifespan.py  test.py
src/core/dependencies/: auth.py  data.py  db.py  fiscal.py
src/core/models/: repository.py
src/core/utils/: fiscalloader.py  polarshelper.py  polarspagination.py
src/core/utils/openapi/: dataloader.py  datamanager.py  datasaver.py
webkit/: pyproject.toml
webkit/tests/auth/: conftest.py  test_jwt.py
webkit/tests/throttle/: conftest.py  test_decorator.py
webkit/webkit/auth/: manager.py  service.py
webkit/webkit/cache/: __init__.py  lock.py  redisclient.py
webkit/webkit/throttle/: __init__.py  backend.py  decorator.py  limiter.py  middleware.py
